@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v25.10.7-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-10-07 22:11:14, took 00:12:30, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries
+-;-;-;freeRouter v25.10.8-cur, done by sprscc13@mrn0b0dy.
+-;-;-;2025-10-08 08:11:50, took 00:11:56, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
