@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v25.10.7-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-07 22:11:14, took 00:12:30, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
+release: freeRouter v25.10.8-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2025-10-08 08:11:50, took 00:11:56, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
