@@ -17579,3 +17579,6 @@ qc pass: wireguard over ipv6
 ---------------------------------- 2025-10-08 07:18:04 25.10.8
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-10-08 07:44:20 25.10.8
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
